fix about me text and gap

--- a/style.css
+++ b/style.css
@@ -222,8 +222,14 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10rem;
+  gap: 15rem;
   background: var(--second-bg-color);
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
 .about-content h2 {
@@ -235,7 +241,8 @@ section {
 }
 
 .about-content .btn {
-  margin: 3rem 0;
+  width: 20%;
+  margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -243,11 +250,11 @@ section {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--main-color);
+  background-color: #a4e400;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--bg-color);
+  background-color: var(--main-color);
 }
 
 /* SKILLS SECTION */
